--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     content="Chavi is a Full Stack developer who loves to code, here is a website showcasing her work" />
 
   <!-- <meta property="og:image" content="/logo.png" /> -->
-  <!-- <meta property="og:url" content="https://teshank.dev" /> -->
+  <meta property="og:url" content="https://chaviportfolio.vercel.app/" />
   <meta property="og:site_name" content="Chavi Awasthy's Portfolio" />
   <meta property="og:type" content="website" />
 
-  <!-- <link rel="canonical" href="https://www.teshank.dev" /> -->
+  <link rel="canonical" href="https://chaviportfolio.vercel.app/" />
 
   <title>Chavi Awasthy</title>
 
